# db-migrations-and-moddels

./: Cargo.toml  diesel.toml  readme.md
migrations/2024-11-16-111629_create_db/: down.sql  up.sql
src/: models.rs  schema.rs
