[package]
name = "db-migrations"
version = "0.1.0"
author = ["André Hansen"]
edition = "2021"
description = "Database migration moddels for RusseTag"
license = "MIT"
repository = "https://github.com/RusseTag/db-migrations-and-moddels"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
diesel = {version = "2.2.4", features = ["postgres"]}
dotenvy = "0.15.7"
prelude = "0.2.1"
serde = { version = "1.0.215", features = ["derive"] }
